# ussu

./: .gitignore  CMakeLists.txt  README.md  main.c  runas.conf  ussu.conf
util/: authorize.c  authorize.h  cleanup.c  cleanup.h  isAllowed.c  isAllowed.h  util.c  util.h
zsh/: _ussu
